--- a/edit-contact.html
+++ b/edit-contact.html
@@ -28,7 +28,89 @@
 
         <script src="config.js"></script>
         <script>
-            
+
+            var id = getId();
+            document.getElementById("homeLink").addEventListener("click", homeLink);
+            document.getElementById("editContact").addEventListener("click", editContact);
+            document.getElementById("submitForm").addEventListener("click", submitForm);
+            document.getElementById(deleteContact).addEventListener("click", deleteContact);
+            console.log("The id is : " + id);
+
+            function getId(){
+
+                var url = window.location.href;
+                var pos = url.search("=");
+                var id = url.slice(pos + 1);
+                return id;
+
+            }
+
+            function getContact(){
+                fetch(rootPath + "controller/get-contact/" + id)
+                .then(function (response) {
+                    return response.json();
+                })
+                .then(function(data){
+                    displayOutput(data);
+                    console.log(data);
+                })
+                
+            }
+
+            function homeLink() {
+                window.open("index.html", "_self");
+            }
+
+            function displayOutput(data){
+                avatarImg = 
+                <img src="${rootPath}/controller/uploads/${data[0].avatar}" width="200"/>
+
+                document.getElementById("avatarImage").innerHTML = "avatarImg";
+                document.getElementById("firstname").value = data[0].firstname;
+                document.getElementById("laststname").value = data[0].laststname;
+                document.getElementById("mobile").value = data[0].mobile;
+                document.getElementById("email").value = data[0].email;
+            }
+
+            function editContact() {
+                document.getElementById("firstname").readOnly = false;
+                document.getElementById("lastname").readOnly = false;
+                document.getElementById("mobile").readOnly = false;
+                document.getElementById("email").readOnly = false;
+                document.getElementById("avatar").hidden = false;
+                document.getElementById("submitForm").hidden = false;
+            } 
+
+            function submitForm(e) {
+                e.preventDefault();
+
+                const form = new FormData(document.querySelector("#editForm"));
+                form.append('apiKey', apiKey);
+                form.append("id", id);
+
+            }
+
+            function deleteContact(){
+                var confirmDelete = confirm("Are you sure you want to delete this contact?");
+
+                if(cinfirmDelete == true){
+                    fetch(rootPath + 'controller/delete-contact/' + id)
+                    .then(function(response){
+                        return response.text();
+                    })
+                    .then(function(data){
+
+                        if(data == "1"){
+                            homeLink();
+                        } else {
+
+                            alert(data);
+                        }
+                    })
+                }
+
+            }
+
         </script>
     </body>
 </html>
